apps/base/immich-power-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-power-tools
  namespace: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Immich Power Tools
    gethomepage.dev/description: Immich library organization
    gethomepage.dev/group: Medien
    gethomepage.dev/icon: immich.png
    gethomepage.dev/app: immich-power-tools
    gethomepage.dev/pod-selector: app=immich-power-tools
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
    nginx.org/client-max-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - immich-tools.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: immich-tools.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-power-tools
                port:
                  number: 80
